--- a/src/containers/ClassOverview.css
+++ b/src/containers/ClassOverview.css
@@ -11,7 +11,7 @@
 
 .ClassProgressBar {
   width: 80%;
-  margin: auto;
+  margin: 80px auto;
   border: 1px solid rgb(42, 42, 42);
   box-shadow: 2px 2px rgba(73, 74, 74, 0.55);
 }
